Simplified, removed unnecessary properties.